--- a/vbacGUI/src/製造管理システム (13).accdb/cls_LOCALDB.cls
+++ b/vbacGUI/src/製造管理システム (13).accdb/cls_LOCALDB.cls
@@ -1,8 +1,3 @@
-VERSION 1.0 CLASS
-BEGIN
-  MultiUse = -1  'True
-END
-Attribute VB_Name = "cls_LOCALDB"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
@@ -114,3 +109,11 @@ Public Property Get GetRS() As ADODB.Recordset
     Set GetRS = rsADO
 
 End Property
+
+Public Sub RecordSetClose()
+'1.12.0 ADD レコードセットを閉じる
+    On Error Resume Next
+
+    rsADO.Close
+    
+End Sub
