--- a/vbacGUI/src/製造管理システム (13).accdb/cls_BRAND_MASTER.cls
+++ b/vbacGUI/src/製造管理システム (13).accdb/cls_BRAND_MASTER.cls
@@ -118,7 +118,7 @@ Public Function ExecSelect_Writable(SQL As String) As Boolean
 
 End Function
 
-Public Function ExecSQL(SQL As String, Optional ByRef strErrMsg As Variant) As Boolean
+Public Function ExecSQL(SQL As String, Optional ByRef strErrmsg As Variant) As Boolean
     
     ExecSQL = False
 
@@ -130,8 +130,8 @@ Public Function ExecSQL(SQL As String, Optional ByRef strErrMsg As Variant) As B
     If cnADO.Errors.Count = 0 Then
        ExecSQL = True
     Else
-        If Not IsMissing(strErrMsg) Then
-            strErrMsg = cnADO.Errors.Item(0).Description
+        If Not IsMissing(strErrmsg) Then
+            strErrmsg = cnADO.Errors.Item(0).Description
         End If
     End If
 '    Debug.Print strErrMSG
@@ -183,7 +183,7 @@ Err_AsyncState:
     AsyncState = 999
 End Function
 
-Public Function ExecSQL_Async(SQL As String, Optional ByRef strErrMsg As Variant) As Boolean
+Public Function ExecSQL_Async(SQL As String, Optional ByRef strErrmsg As Variant) As Boolean
 '1.11.1 ADD îÒìØä˙é¿çs
     ExecSQL_Async = False
 
@@ -195,8 +195,8 @@ Public Function ExecSQL_Async(SQL As String, Optional ByRef strErrMsg As Variant
     If cnADO.Errors.Count = 0 Then
        ExecSQL_Async = True
     Else
-        If Not IsMissing(strErrMsg) Then
-            strErrMsg = cnADO.Errors.Item(0).Description
+        If Not IsMissing(strErrmsg) Then
+            strErrmsg = cnADO.Errors.Item(0).Description
         End If
     End If
 '    Debug.Print strErrMSG
